--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.mkghosh.encryptionpractice.MainActivity">
+    tools:context="com.example.mkghosh.encryptionpractice.activity.MainActivity">
 
     <EditText
         android:id="@+id/editText_getText"
